# wovensnake

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SKILL.md  clippy.toml  wovenpkg.json
.agent/: SKILL.md
.agent/workflows/: debugging.md  feature.md  improvement.md  release.md
.agents/: main.yaml
.agents/context/: project.md
.agents/skills/rust-anti-pattern/: SKILL.md  SKILL_EN.md
.agents/skills/rust-anti-pattern/agents/: openai.yaml
.agents/skills/rust-async/: SKILL.md  SKILL_EN.md
.agents/skills/rust-async/agents/: openai.yaml
.agents/skills/rust-coding/: SKILL.md  SKILL_EN.md
.agents/skills/rust-coding/agents/: openai.yaml
.agents/skills/rust-error/: SKILL.md  SKILL_EN.md
.agents/skills/rust-error/agents/: openai.yaml
.agents/skills/rust-lifetime-complex/: SKILL.md  SKILL_EN.md
.agents/skills/rust-lifetime-complex/agents/: openai.yaml
.agents/skills/rust-mutability/: SKILL.md  SKILL_EN.md
.agents/skills/rust-mutability/agents/: openai.yaml
.agents/skills/rust-observability/: SKILL.md
.agents/skills/rust-observability/agents/: openai.yaml
.agents/skills/rust-ownership/: SKILL.md  SKILL_EN.md
.agents/skills/rust-ownership/agents/: openai.yaml
.agents/skills/rust-performance/: SKILL.md  SKILL_EN.md
.agents/skills/rust-performance/agents/: openai.yaml
.agents/skills/rust-testing/: SKILL.md
.agents/skills/rust-testing/agents/: openai.yaml
.agents/skills/rust-type-driven/: SKILL.md  SKILL_EN.md
.agents/skills/rust-type-driven/agents/: openai.yaml
.agents/workflows/: feature.md  improvement.md  release.md
.githooks/: pre-push
.github/: pull_request_template.md
.github/rulesets/: main-protection.json
.github/workflows/: codeql.yml  dev.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md
metadata/: python_downloads.json
reports/: playground_report.html
scripts/: fetch_python_metadata.py  install.ps1  install.sh  setup-hooks.sh  uninstall.sh  validate_playground.ps1  validate_playground.sh
src/: lib.rs  main.rs
src/cli/: add.rs  clean.rs  init.rs  install.rs  list.rs  mod.rs  progress.rs  remove.rs  run.rs  self_uninstall.rs  update.rs  ux.rs
src/core/: cache.rs  config.rs  error.rs  http.rs  installer.rs  lock.rs  marker.rs  mod.rs  python.rs  python_manager.rs  resolver.rs  selection.rs  venv.rs
src/core/python_manager/: downloader.rs  metadata.rs  mod.rs
src/dependencies/: mod.rs  package.rs
tests/acceptance/: story_init.rs
tests/integration/: core_flow.rs  features.rs
tests/system/: cli_execution.rs
tests/unit/: models.rs  python_logic.rs
