[package]
name = "wovensnake"
version = "0.1.0"
authors = ["jackby03 jackdelaguilavilla03@gmail.com"]
edition = "2021"

[dependencies]
tempfile = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.5"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "0.31"

[build-dependencies]

[package.metadata]
repository = "https://github.com/jackby03/wovensnake"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true

[features]
default = ["logging"]
logging = []