[package]
name = "wovensnake"
version = "0.1.0"
authors = ["jackby03 jackdelaguilavilla03@gmail.com"]
edition = "2025"
description = "A high-performance Python package manager built with Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jackby03/wovensnake"
homepage = "https://github.com/jackby03/wovensnake"
keywords = ["python", "package-manager", "rust", "installer", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tempfile = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.5"
log = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
zip = "7.0.0"
indicatif = "0.18.3"
futures = "0.3.31"
flate2 = "1.1.5"
tar = "0.4.44"
pep440 = "0.2.0"
pep508_rs = "0.9.2"
sha2 = "0.10.9"
dirs = "6.0.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "0.31"

[build-dependencies]

[package.metadata]
repository = "https://github.com/jackby03/wovensnake"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true

[features]
default = ["logging"]
logging = []
